# modlog

./: .bazelrc  .gitignore  CMakeLists.txt  LICENSE  MODULE.bazel  README.md
.github/workflows/: freebsd.yml  macos-arm64.yml  multiplatform.yml  test-arm.yml  test-armv7-32.yml  test-armv7.yml  test-freebsd.yml
demo/: BUILD  demo1.cpp  demo2.cpp  demo3.cpp  demo4.cpp  demo5.cpp  demo6.cpp
examples/modlog1/: CMakeLists.txt  example_cpp17  main-cpp17.cpp  main.cpp  makefile
include/: BUILD
include/modlog/: BUILD  modlog.hpp  modlog_macros.hpp
src/: modlog.cppm
tests/: Makefile  all_ut.cpp
